--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,12 @@
 image: ruby2.0.0
-script:
-  - cp config/database.drone.yml config/database.yml
-  - bundle install
-  - psql -c 'create database test;' -U postgres -h 127.0.0.1
-  - bundle exec rake db:schema:load
-  - bundle exec rspec spec
 services:
-  - postgres
-notify:
-  email:
-    recipients:
-      - andrew.hall903@gmail.com
+  - library/postgres:9.4.4
+script:
+  - mkdir -p /tmp/bundle
+  - bundle install -j8 --path /tmp/bundle 
+  - cp config/database.drone.yml config/database.yml
+  #- psql -c 'create database test;' -U postgres -h 127.0.0.1
+  - bundle exec rake db.create db:schema:load
+  - bundle exec rspec spec
+
 
